force-app/main/default/objects/Discount__c/fields/Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Amount_Type__c</fullName>
    <inlineHelpText>How is the discount calculated</inlineHelpText>
    <label>Amount Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed_Amount</fullName>
                <label>Fixed Amount</label>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>