force-app/main/default/objects/Discount__c/fields/Recurrence_Day_Of_Month__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Day_Of_Month__c</fullName>
    <label>Recurrence Day Of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>