force-app/main/default/objects/Discount__c/fields/Recurrence_Month_Of_Year__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Month_Of_Year__c</fullName>
    <label>Recurrence Month Of Year</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>