force-app/main/default/objects/Discount__c/fields/Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Type__c</fullName>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>